[package]
name = "rust_keymacro"
version = "1.3.0"
edition = "2021"

[dependencies]
tray-icon = "0.19"
winit = "0.30"
global-hotkey = "0.6"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rand = "0.8"
gilrs = "0.11"
log = "0.4"
simplelog = "0.12"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_XboxController",
]
